--- a/market.html
+++ b/market.html
@@ -368,6 +368,7 @@
           {
             name: "首板数",
             type: "bar",
+            color: "#5470c6",
             tooltip: {
               valueFormatter: function (value) {
                 return value + " 个";
@@ -378,6 +379,7 @@
           {
             name: "二板数",
             type: "bar",
+            color: "#91cc75",
             tooltip: {
               valueFormatter: function (value) {
                 return value + " 个";
@@ -388,6 +390,7 @@
           {
             name: "三板数",
             type: "bar",
+            color: "#fac858",
             tooltip: {
               valueFormatter: function (value) {
                 return value + " 个";
@@ -398,6 +401,7 @@
           {
             name: "高度板数",
             type: "bar",
+            color: "#ee6666",
             tooltip: {
               valueFormatter: function (value) {
                 return value + " 个";
@@ -408,6 +412,7 @@
           {
             name: "首板成功率",
             type: "line",
+            color: "#5470c6",
             yAxisIndex: 1,
             tooltip: {
               valueFormatter: function (value) {
@@ -419,6 +424,7 @@
           {
             name: "一进二成功率",
             type: "line",
+            color: "#91cc75",
             yAxisIndex: 1,
             tooltip: {
               valueFormatter: function (value) {
@@ -430,6 +436,7 @@
           {
             name: "二进三成功率",
             type: "line",
+            color: "#fac858",
             yAxisIndex: 1,
             tooltip: {
               valueFormatter: function (value) {
@@ -441,6 +448,7 @@
           {
             name: "高度板连扳率",
             type: "line",
+            color: "#ee6666",
             yAxisIndex: 1,
             tooltip: {
               valueFormatter: function (value) {
