--- a/market2.html
+++ b/market2.html
@@ -576,6 +576,7 @@
           {
             name: "首板数",
             type: "bar",
+            color: "#5470c6",
             tooltip: {
               valueFormatter: function (value) {
                 return value + " 个";
@@ -586,6 +587,7 @@
           {
             name: "二板数",
             type: "bar",
+            color: "#91cc75",
             tooltip: {
               valueFormatter: function (value) {
                 return value + " 个";
@@ -596,6 +598,7 @@
           {
             name: "三板数",
             type: "bar",
+            color: "#fac858",
             tooltip: {
               valueFormatter: function (value) {
                 return value + " 个";
@@ -606,6 +609,7 @@
           {
             name: "高度板数",
             type: "bar",
+            color: "#ee6666",
             tooltip: {
               valueFormatter: function (value) {
                 return value + " 个";
@@ -616,6 +620,7 @@
           {
             name: "首板成功率",
             type: "line",
+            color: "#5470c6",
             yAxisIndex: 1,
             tooltip: {
               valueFormatter: function (value) {
@@ -627,6 +632,7 @@
           {
             name: "一进二成功率",
             type: "line",
+            color: "#91cc75",
             yAxisIndex: 1,
             tooltip: {
               valueFormatter: function (value) {
@@ -638,6 +644,7 @@
           {
             name: "二进三成功率",
             type: "line",
+            color: "#fac858",
             yAxisIndex: 1,
             tooltip: {
               valueFormatter: function (value) {
@@ -649,6 +656,7 @@
           {
             name: "高度板连扳率",
             type: "line",
+            color: "#ee6666",
             yAxisIndex: 1,
             tooltip: {
               valueFormatter: function (value) {
