--- a/market.html
+++ b/market.html
@@ -121,6 +121,10 @@
       yesterday = klines30[klines30.length - 2].split(",")[0].replace(/-/g, '');
       initPageDom()
       if (!allData[today]) {
+        initChart1()
+        initChart2()
+        initChart3()
+      } else {
         queryTodayData()
       }
     }
