--- a/market.html
+++ b/market.html
@@ -47,13 +47,13 @@
   <div id="chart3"></div>
   <div id="page">
     <div style="text-align: center;"><span id="day" class="day" style="font-weight: bold;"></span>&nbsp;&nbsp;</div>
-    <div style="white-space: nowrap; font-size: 12px;">
+    <div style="white-space: nowrap; font-size: 12px; line-height: 1.1;">
       <span class="label">行业前三：</span>&nbsp;
       <span id="value0" class="value"></span>&nbsp;&nbsp;
       <span id="value1" class="value"></span>&nbsp;&nbsp;
       <span id="value2" class="value"></span>
     </div>
-    <div style="white-space: nowrap; font-size: 12px;">
+    <div style="white-space: nowrap; font-size: 12px; line-height: 1.1;">
       <span class="label">概念前三：</span>&nbsp;
       <span id="gainian0" class="value"></span>&nbsp;&nbsp;
       <span id="gainian1" class="value"></span>&nbsp;&nbsp;
