--- a/market.html
+++ b/market.html
@@ -120,7 +120,7 @@
       today = showDay.replace(/-/g, '');
       yesterday = klines30[klines30.length - 2].split(",")[0].replace(/-/g, '');
       initPageDom()
-      if (!allData[today]) {
+      if (allData[today]) {
         initChart1()
         initChart2()
         initChart3()
@@ -176,7 +176,7 @@
         boomRate = '0',
         yesterdayUpTodayRise = '0',
         yesterdayLineTodayRise = '0',
-        yesterdayBoomTodayRise = undefined,
+        yesterdayBoomTodayRise = null,
         topThreeIndustry = '',
         totalBoomNum = 0;
       todayZTData.pool.forEach(item => {
