--- a/market.html
+++ b/market.html
@@ -369,6 +369,7 @@
             nameTextStyle: {
               padding: [0, 0, 0, -30]
             },
+            offset: -5,
             min: 0,
             max: 200,
             interval: 50,
@@ -551,6 +552,7 @@
             nameTextStyle: {
               padding: [0, 0, 0, -40]
             },
+            offset: -5,
             min: 0,
             max: 150,
             interval: 50,
@@ -749,6 +751,7 @@
             name: "炸板率", nameTextStyle: {
               padding: [0, 0, 0, -50]
             },
+            offset: -5,
             min: 0,
             max: 100,
             interval: 20,
