--- a/market.html
+++ b/market.html
@@ -10,6 +10,9 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/moment@2.30.1/moment.min.js"></script> -->
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.13/dayjs.min.js"></script>
   <style>
+    body{
+      font-size: 12px;
+    }
     * {
       margin: 0;
       padding: 0;
